<resources>
    <string name="app_name">StarworkS</string>
    <string name="mainscr_msg">FIND TALENTED &amp; BEST DEVELOPERS IN VARIOUS FIELDS OF EXPERTISE</string>
    <string name="logemp">LOGIN AS ENGINEER</string>
    <string name="logcomp">LOGIN AS COMPANY</string>
    <string name="hire">Hire</string>


    <string name="or">or</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="email">Email Address</string>
    <string name="input_email">Masukkan email</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="register_here">REGISTER</string>
    <string name="dont_have_an_account">Tidak Memiliki Akun ?</string>
    <string name="my_logo">My Logo</string>
    <string name="main_background">Main Background</string>

    <!--SignUp-->
    <string name="action_sign_in_short">Sign up</string>
    <string name="instruction_sign_up">Please fill the form below correctly</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_an_account">You have an account?</string>
    <string name="login_here">Login here</string>
    <string name="password_confirmation">Password Confirmation</string>

    <string name="img_profile">Image Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back_to_profile">Back to profile</string>


    <!-- Experience -->
    <string name="add_experience">Add Experience</string>
    <string name="instruction_add_experience">Please fill the experience for add new experience below</string>
    <string name="position_exp">Position</string>
    <string name="company_exp">Company</string>
    <string name="start_exp">Date Start</string>
    <string name="end_exp">Date End</string>
    <string name="description_exp">Description</string>
    <string name="experience_tab_title">Experience</string>

    <!-- Reset Password -->
    <string name="instruction_verify_email">Please fill the email below correctly</string>
    <string name="instruction_reset_password">Please fill the new password and password confirmation below correctly</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="next">NEXT</string>
    <string name="back_to_login">Back to login</string>
    <string name="back_to_verify">Back to verify email</string>
    <string name="new_password">New Password</string>

    <!-- Skill -->
    <string name="add_skill">Add Skill</string>
    <string name="instruction_add_skill">Please fill the skill for add new skill below</string>
    <string name="new_skill">New Skill</string>
    <string name="skill_hint">Your new skill</string>
    <string name="skill">Skill</string>

    <!-- Portfolio -->
    <string name="add_portfolio">Add Portofolio</string>
    <string name="instruction_add_portfolio">Please fill the portfolio for add new portfolio below</string>
    <string name="app_name_portfolio">App Name</string>
    <string name="pub">Publication</string>
    <string name="repo">Repository</string>
    <string name="workplace">Workplace</string>
    <string name="portfolio_type">Portfolio Type</string>
    <string name="app_hint">Your app name</string>
    <string name="description_hint">Short description</string>
    <string name="link_pub_hint">Publication link</string>
    <string name="link_repo_hint">Repository link</string>
    <string name="work_place_hint">Related workplace</string>
    <string name="portfolio_type_hint">Portfolio type</string>
    <string name="image_upload">Choose Image</string>
    <string name="mobile_application">Mobile Application</string>
    <string name="web_application">Web Application</string>
    <string name="portfolio_tab_title">Portofolio</string>

    <!-- Not set -->
    <string name="ac_name_not_set">Name Not Set</string>
    <string name="en_job_title_not_set">Job Title Not Set</string>
    <string name="en_job_type_not_set">Job Type Not Set</string>
    <string name="en_domicile_not_set">Domicile Not Set</string>
    <string name="en_description_not_set">Description Not Set</string>

    <!-- Not set -->
    <string name="cn_company_not_set">Company Not Set</string>
    <string name="cn_position_not_set">Position Not Set</string>
    <string name="cn_field_not_set">Field Not Set</string>
    <string name="cn_city_not_set">City Not Set</string>
    <string name="cn_description_not_set">Description Not Set</string>
    <string name="ac_phone_number_not_set">Phone Number Not Set</string>
    <string name="cn_instagram_not_set">Instagram Not Set</string>
    <string name="cn_linked_not_set">LinkedIn Not Set</string>

    <!--autofix-->
    <string name="pt_wasa_mitra_engineering">PT. Wasa Mitra Engineering</string>
    <string name="chief_of_pt_wme">Chief of PT WME</string>
    <string name="cakung_jakarta_timur">Cakung, Jakarta Timur</string>
    <string name="finansial">Finansial</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vestibulum_erat_orci_mollis_nec_gravida_sed_ornare_quis_urna_curabitur_eu_lacus_fringilla_vestibulum_risus_at">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum erat orci, mollis nec gravida sed, ornare quis urna. Curabitur eu lacus fringilla, vestibulum risus at.</string>
    <string name="todo">TODO</string>
    <string name="wasamitra_eam_wme_com">wasamitra.eam@wme.com</string>
    <string name="email_amp_social_media"><![CDATA[Email & Social Media]]></string>
    <string name="photoprofile">photoprofile</string>
    <string name="miqdad">Miqdad</string>
    <string name="android_developer">Android Developer</string>
    <string name="bekasi_jawa_barat">Bekasi, Jawa Barat</string>
    <string name="freelance">Freelance</string>
    <string name="junior_android_developer">Junior Android Developer</string>
    <string name="gohipe_teknologi">PT. Wasa Mitra Engineering</string>
    <string name="february_2021_october_2022">Januari 2018 - November 2020</string>
    <string name="total_months">22 Month</string>
    <string name="img_icon">IMG Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_background">Image Background</string>
    <string name="create_project">Create Project</string>
    <string name="Reject">Reject</string>
    <string name="Approve">Approve</string>
    <string name="floatingAction">Floating Action</string>
    <string name="approve">Approve</string>
    <string name="engineer_name">Engineer Name</string>
    <string name="miqdad_ihbs71777">miqdad.ihbs71777</string>
    <string name="miqdad_aja7">miqdad_aja7</string>
    <string name="contact">Contact</string>
    <string name="miqdad71">miqdad71</string>
    <string name="eam_wme">eam_wme</string>
    <string name="eamwme">eamwme</string>
    <string name="image_phone">Image Phone</string>
    <string name="edit_skill">Edit Skill</string>
    <string name="delete_skill">Delete Skill</string>
    <string name="please_fill_in_the_form_data_correctly">Please fill in the form data correctly</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="job_title">Job Title</string>
    <string name="your_job_title">Your Job Title</string>
    <string name="job_type">Job Type</string>
    <string name="your_job_type">Your Job Type</string>
    <string name="domicile">Domicile</string>
    <string name="description">Description</string>
    <string name="short_description">Short Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="project_name">Project name</string>
    <string name="message">Message</string>
    <string name="waiting">Waiting</string>
    <string name="update_image_profile">Update Image</string>
    <string name="update_image_upload">Update Image</string>
    <string name="instruction_update_image_profile">Choose image for your profile photo</string>
    <string name="add_portfolio_experience">Add Portfolio/Experience</string>
    <string name="delete_portfolio">Delete Portfolio</string>
    <string name="update_portfolio">Update Portfolio</string>
    <string name="update_experience">Update Experience</string>
    <string name="delete_experience">Delete Experience</string>
    <string name="edit_project">Edit Project</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_as_company">Login As Company</string>
    <string name="all_talent">All Talent</string>
    <string name="login_as_talent">Login As Talent</string>
    <string name="nama_aplikasi">Application Name</string>
    <string name="deskripsi_aplikasi">Application Desc</string>
    <string name="tanggal_deadline">Date</string>
    <string name="deadline">Deadline : </string>
    <string name="add_project">Add Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="hire_approve">Approve</string>
    <string name="hire_reject">Reject</string>
    <string name="hire_project_deadline">Deadline Project</string>
    <string name="hire_project_description">Desc</string>
    <string name="hire_project_name">Project Name</string>
    <string name="detail_project">Detail Project</string>
    <string name="account_header">Account</string>
    <string name="ac_name">Name</string>
    <string name="ac_email">Email Address</string>
    <string name="ac_phone">Phone Number</string>
    <string name="personal_data_header">Personal Data</string>
    <string name="en_job_title">Job Title</string>
    <string name="en_job_type">Job Type</string>
    <string name="en_domicile">Domicile</string>
    <string name="en_description">Description</string>
    <string name="cn_company">Company Name</string>
    <string name="cn_position">Position in Company</string>
    <string name="cn_field">Field</string>
    <string name="cn_city">City</string>
    <string name="cn_description">Description</string>
    <string name="cn_instagram">Instagram</string>
    <string name="cn_linkedin">LinkedIn</string>
    <string name="shimmer_description">Description</string>
</resources>