<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="@color/white"
    tools:context=".EngineerLoginActivity">

    <ImageView
        android:id="@+id/img_loginfrg_logo"

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loginfrg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.05"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_loginfrg_logo" />

    <TextView
        android:id="@+id/tv_loginfrg_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginfrg_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/it_loginfrg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/darker_gray"
        backgroundColor="@color/black"
        hintTextColor="@color/white"
        boxStrokeColor="@color/black"
        boxCornerRadiusTopStart="10dp"
        boxCornerRadiusTopEnd="10dp"
        android:hint="@string/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginfrg_fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_loginfrg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/it_loginfrg_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/it_loginfrg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/darker_gray"
        backgroundColor="@color/black"
        hintTextColor="@color/white"
        boxStrokeColor="@color/black"
        boxCornerRadiusTopStart="10dp"
        boxCornerRadiusTopEnd="10dp"
        android:hint="@string/input_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="min. length 8 characters"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#99FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginfrg_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_loginfrg_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/it_loginfrg_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loginfrg_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginfrg_forgot_password" />

    <TextView
        android:id="@+id/tv_loginfrg_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_loginfrg_login" />

    <TextView
        android:id="@+id/tv_loginfrg_register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/register_here"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_loginfrg_dont_have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>