<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.OnboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:contentDescription="@string/main_background"
            android:scaleType="centerCrop"
            android:src="@drawable/img_main_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/maincolor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_bg" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="68dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mainscr_msg"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/img_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:onClick="onClick"
            android:text="@string/logemp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_or"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/v_start"
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_company"
            app:layout_constraintEnd_toStartOf="@+id/tv_or"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btn_company" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_company"
            app:layout_constraintEnd_toStartOf="@+id/v_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/v_start" />

        <View
            android:id="@+id/v_end"
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_company"
            app:layout_constraintEnd_toEndOf="@+id/btn_company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_or" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_company"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="sans-serif-black"
            android:onClick="onClick"
            android:text="@string/logcomp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn_maincolor"
            app:layout_constraintBottom_toBottomOf="@+id/img_bg"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>