<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image_project"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_profile"
                android:src="@drawable/ic_add_image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/ln_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_image_project"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_project_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-thin"
                    android:singleLine="true"
                    android:text="@string/nama_aplikasi"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:ellipsize="end"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"
                    android:text="@string/deskripsi_aplikasi"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_desc_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_identity"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tv_desc_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="80dp"
                    android:text="@string/deadline"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_identity"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tv_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tanggal_deadline"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>
