<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/mainColor"
                android:elevation="8dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/tv_add_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/add_skill"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/instruction_add_skill"
                android:textColor="@color/gray_500"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_skill" />

            <TextView
                android:id="@+id/tv_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:text="@string/skill"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruction" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_skill"
                app:layout_constraintTop_toBottomOf="@+id/tv_skill">

                <EditText
                    android:id="@+id/et_skill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_white"
                    android:hint="@string/skill_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="18dp"
                    android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_skill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:onClick="onClick"
                android:padding="14dp"
                android:text="@string/add_skill"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
